--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </head>
 <body ng-app="starter" ng-controller="rootCtrl">
 <!--<a class="button button-clear icon ion-ios-arrow-left" ng-click="$ionicGoBack()" >adsfasf</a>-->
-<div id="a" style="display: block">xxx</div>
+<div id="a" style="display: block">
+    <img src="img/yzyy.png" width="100%">
+</div>
 
 <!--
   The nav bar that will be updated as we navigate between views.
@@ -44,7 +46,7 @@
         setTimeout(function () {
             window.document.getElementById("a").style.display = 'none';
             window.document.getElementById("b").style.display = 'block';
-        }, 10);
+        }, 200);
     })();
 </script>
 </html>
