--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
 <!-- 多选 -->
 <script id="multipleModal.html" type="text/ng-template">
     <div class="modal multiple-modal" ng-controller="multipleCtrl">
-        <div ng-include="'page/multiple.html'"></div>
+        <div ng-include="'page/modal/multiple.html'"></div>
     </div>
 </script>
 
 <!-- 大数据多选 -->
 <script id="multiplePlusModal.html" type="text/ng-template">
     <div class="modal" ng-controller="multiplePlusCtrl">
-        <div ng-include="'page/multiplePlus.html'"></div>
+        <div ng-include="'page/modal/multiplePlus.html'"></div>
     </div>
 </script>
 
 <!-- 联动组件 -->
 <script id="areaModal.html" type="text/ng-template">
     <div class="modal multiple-modal" ng-controller="areaCtrl">
-        <div ng-include="'page/area.html'"></div>
+        <div ng-include="'page/modal/area.html'"></div>
     </div>
 </script>
 
 <!-- 手动填写 -->
 <script id="listDiyModal.html" type="text/ng-template">
     <div class="modal" ng-controller="listDiyCtrl">
-        <div ng-include="'page/listDiy.html'"></div>
+        <div ng-include="'page/modal/listDiy.html'"></div>
     </div>
 </script>
