技术点开发

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ion-nav-back-button>
 
         <!--<ion-nav-buttons side="right">-->
-            <!--<a class="button button-clear icon ion-android-add " ng-click="saveTenantSettings()"></a>-->
+            <!--<a class="button button-clear icon ion-android-add " herf=""></a>-->
         <!--</ion-nav-buttons>-->
 
     </ion-nav-bar>
