--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/common/common.js" defer="defer"></script>
     <script src="js/common/context.js" defer="defer"></script>
     <script src="js/common/contextManager.js" defer="defer"></script>
+    <script src="js/common/notice.js" defer="defer"></script>
     <script src="js/terminalProxy/terminalProxyPublishCtrl.js" defer="defer"></script>
     <script src="js/terminalProxy/terminalProxyPublishService.js" defer="defer"></script>
     <script src="js/terminalProxy/terminalProxyQueryCtrl.js" defer="defer"></script>
